<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseUniversityActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_250mdp"
        android:src="@drawable/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_university_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/university_select_text"
        android:textAlignment="center"
        android:layout_below="@id/imageView3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto_medium"/>


    <Spinner
        android:id="@+id/universitySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_university_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/spinner_bg"
        android:entries="@array/university_select"
        android:gravity="center"
        android:padding="20dp"
        android:prompt="@string/university_prompt"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/universitySpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/spinner_bg"
        android:entries="@array/role_select"
        android:gravity="center"
        android:padding="20dp"
        android:prompt="@string/role_prompt"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnUniversitySubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/submit" />


</RelativeLayout>